[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "arrow-puzzle-automation"
version = "0.1.0"
description = "Local vision and click automation for the Exponential Idle arrow puzzle."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pillow>=10.0",
    "opencv-python>=4.10",
    "mss>=9.0",
    "pyautogui>=0.9",
]

[project.scripts]
arrow-puzzle = "arrow_puzzle.cli:main"

[tool.setuptools.packages.find]
include = ["arrow_puzzle*"]
